Add exports for acceptance tests
Co-authored-by: Dale Emery <demery@vmware.com>